Update 'l258qvwd8-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:8eaea6fe15cb264dea1eb657c3569ed0df4d42f8@sha256:d67a85250314950e50cb5095eb0c32fe751498e6c9fb93cc012f607a6c659c91

--- a/components/l258qvwd8-python/overlays/development/deployment-patch.yaml
+++ b/components/l258qvwd8-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: l258qvwd8-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:8eaea6fe15cb264dea1eb657c3569ed0df4d42f8@sha256:d67a85250314950e50cb5095eb0c32fe751498e6c9fb93cc012f607a6c659c91
+          name: container-image
